fix: 替换 List.of() 为 Java 8 兼容写法，修复 CI 编译失败
CI（JDK 8）编译失败：List.of() 为 Java 9+ API，项目按 Java 8 编译。
本地 JDK 21 可编译通过，掩盖了兼容性问题。

- GroupMessageService：PipeChain 装配 List.of → Arrays.asList（2 处）
- GroupJoinController：成员列表 List.of → Arrays.asList（2 处）
- AdminRoleConfig：角色权限 List.of → Arrays.asList（3 处）
- BotMarketService：空结果 List.of() → Collections.emptyList()（1 处）
- 各文件补充 java.util.Arrays / java.util.Collections import

验证：test-compile 通过，admin/bot/group 上下文护栏测试 0 失败。